--- a/app1/src/index.html
+++ b/app1/src/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>App1</title>
-  <base href="/">
+  <base href="/app1/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="assets/grid.css">
 </head>
 <body>
   <app-root>
@@ -26,7 +27,7 @@
         </div>
       </div>
       <div class="content">
-        <h1>Loading Angular App 1</h1>
+        <h1>1. Loading Angular App 1</h1>
       </div>
     </div>
   </app-root>
