--- a/app2/src/index.html
+++ b/app2/src/index.html
@@ -6,7 +6,7 @@
   <base href="/app2/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8080/grid.css">
+  <link rel="stylesheet" type="text/css" href="http://localhost/grid.css">
 </head>
 <body>
   <app-root>
