--- a/app1/src/index.html
+++ b/app1/src/index.html
@@ -7,7 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8080/grid.css">
+  <link rel="stylesheet" type="text/css" href="http://localhost/grid.css">
 </head>
 <body>
   <app-root>
