--- a/app2/src/index.html
+++ b/app2/src/index.html
@@ -15,7 +15,7 @@
       <div class="header">
       </div>
       <div class="menu">
-        <layout-menu links='[{"loading":true},{"loading":true}]'></layout-menu>
+        <layout-menu></layout-menu>
       </div>
       <div class="content">
         <h1>1. Loading Angular App 2</h1>
